Added problems to test square and kite definitions

--- a/Main/TestApp/TestApp.csproj
+++ b/Main/TestApp/TestApp.csproj
@@ -48,13 +48,18 @@
     <Compile Include="MainProgram.cs" />
     <Compile Include="Obsolete\PebblerHypergraph.cs" />
     <Compile Include="Problems\ProofProblems\ActualProofProblem.cs" />
+    <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\ExtraSquareProblem.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page162Problem20.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page166Problem05.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page166Problem04.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page166Problem01.cs" />
+    <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page170ClassroomExercise05.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page173Theorem415.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page174Theorem416_1.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page174Theorem416_2.cs" />
+    <Compile Include="Problems\ProofProblems\Kite Problems\KiteProblem01.cs" />
+    <Compile Include="Problems\ProofProblems\Kite Problems\KiteProblem02.cs" />
+    <Compile Include="Problems\ProofProblems\Kite Problems\KiteProblems.cs" />
     <Compile Include="Problems\ProofProblems\QuadrilateralsProblem.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page166Problem02.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page166Problem03.cs" />
