Fix of proportionality Expressions to Equations

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Main/SilverlightClient/SilverlightClient.2010.v11.suo
 Main/SilverlightClient/SilverlightClient.2010.v11.suo
+Main/SilverlightClient/SilverlightClient.2010.v11.suo
