--- a/Main/GeometryTutorLib/GeometryTutorLib.csproj
+++ b/Main/GeometryTutorLib/GeometryTutorLib.csproj
@@ -71,6 +71,9 @@
     <Compile Include="Area-Based Analyses\Regions\ShapeRegion.cs" />
     <Compile Include="Area-Based Analyses\AtomicRegions\NonShapeAtomicRegion.cs" />
     <Compile Include="Area-Based Analyses\AtomicRegions\ShapeAtomicRegion.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Proportionalities\AlgebraicSegmentRatioEquation.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Proportionalities\GeometricSegmentRatioEquation.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Proportionalities\SegmentRatioEquation.cs" />
     <Compile Include="ConcreteAST\Equations\NumericValue.cs" />
     <Compile Include="ConcreteAST\Figures\ConcavePolygon.cs" />
     <Compile Include="ConcreteAST\Figures\ImaginaryPoint.cs" />
@@ -90,12 +93,12 @@
     <Compile Include="ConcreteAST\Desciptors\Arcs and Circles\ArcBisector.cs" />
     <Compile Include="ConcreteAST\Desciptors\Arcs and Circles\ArcSegmentBisector.cs" />
     <Compile Include="ConcreteAST\Desciptors\Arcs and Circles\ArcArcBisector.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\CongruentCircles.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\AlgebraicCongruentCircles.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\AlgebraicCongruentArcs.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\CongruentArcs.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\GeometricCongruentArcs.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\GeometricCongruentCircles.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\CongruentCircles.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\AlgebraicCongruentCircles.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\AlgebraicCongruentArcs.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\CongruentArcs.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\GeometricCongruentArcs.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\GeometricCongruentCircles.cs" />
     <Compile Include="ConcreteAST\Desciptors\Tangent.cs" />
     <Compile Include="ConcreteAST\Figures\Circle.cs" />
     <Compile Include="ConcreteAST\Figures\Arc.cs" />
@@ -170,22 +173,20 @@
     <Compile Include="ConcreteAST\Desciptors\GeometricParallel.cs" />
     <Compile Include="ConcreteAST\Desciptors\PerpendicularBisector.cs" />
     <Compile Include="ConcreteAST\Desciptors\Relations\AlgebraicSimilarTriangles.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\AlgebraicCongruentTriangles.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\AlgebraicProportionalAngles.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\GeometricProportionalAngles.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\ProportionalAngles.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\GeometricCongruentTriangles.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\AlgebraicCongruentTriangles.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Proportionalities\AlgebraicProportionalAngles.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Proportionalities\GeometricProportionalAngles.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Proportionalities\ProportionalAngles.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\GeometricCongruentTriangles.cs" />
     <Compile Include="ConcreteAST\Desciptors\Relations\GeometricSimilarTriangles.cs" />
     <Compile Include="ConcreteAST\Desciptors\SegmentBisector.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\AlgebraicProportionalSegments.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\GeometricProportionalSegments.cs" />
     <Compile Include="ConcreteAST\Desciptors\Supplementary.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\ProportionalSegments.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Proportionalities\SegmentRatio.cs" />
     <Compile Include="ConcreteAST\Desciptors\Strenghtened.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\AlgebraicCongruentAngles.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\CongruentAngles.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\AlgebriacCongruentSegments.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\CongruentSegments.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\AlgebraicCongruentAngles.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\CongruentAngles.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\AlgebriacCongruentSegments.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\CongruentSegments.cs" />
     <Compile Include="ConcreteAST\Desciptors\Relations\SimilarTriangles.cs" />
     <Compile Include="ConcreteAST\Equations\AngleEquation.cs" />
     <Compile Include="ConcreteAST\Equations\SegmentEquation.cs" />
@@ -198,10 +199,10 @@
     <Compile Include="ConcreteAST\Equations\Operations\ArithmeticOperation.cs" />
     <Compile Include="ConcreteAST\Figures\Angle.cs" />
     <Compile Include="ConcreteAST\Desciptors\Collinear.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\Congruent.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\GeometricCongruentAngles.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\GeometricCongruentSegments.cs" />
-    <Compile Include="ConcreteAST\Desciptors\Relations\CongruentTriangles.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\Congruent.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\GeometricCongruentAngles.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\GeometricCongruentSegments.cs" />
+    <Compile Include="ConcreteAST\Desciptors\Relations\Congruences\CongruentTriangles.cs" />
     <Compile Include="ConcreteAST\Figures\RightAngle.cs" />
     <Compile Include="ConcreteAST\Figures\RightTriangle.cs" />
     <Compile Include="ConcreteAST\Figures\EquilateralTriangle.cs" />
