Tangency bug fix: instead of comparing the length of the perpendicular with the radius when determining tangency, confirm that the intersection between the segment and its perpendicular lies on the circle. The length comparison has no guarantee of working since the x component of the perpendicular's new endpoint is randomly chosen for any non-vertical or non-horizontal perpendicular.

--- a/Main/TestApp/TestApp.csproj
+++ b/Main/TestApp/TestApp.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Problems\ProofProblems\ActualProofProblem.cs" />
     <Compile Include="Problems\ProofProblems\CirclesProblem.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Circles\Page296Theorem7_1.cs" />
+    <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Circles\Page296Theorem7_1_Test2.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\ExtraSquareProblem.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page162Problem20.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page166Problem05.cs" />
