--- a/Main/GeometryTutorLib/GeometryTutorLib.csproj
+++ b/Main/GeometryTutorLib/GeometryTutorLib.csproj
@@ -66,11 +66,24 @@
     <Compile Include="Area-Based Analyses\Area Equations\AreaSubtraction.cs" />
     <Compile Include="Area-Based Analyses\AreaHypergraph\AreaHypergraph.cs" />
     <Compile Include="Area-Based Analyses\AreaHypergraph\AreaHypergraphCreator.cs" />
+    <Compile Include="AtomicRegions\Atomic Region Calculator\PrimitiveToRegionConverter.cs" />
+    <Compile Include="AtomicRegions\Connection.cs" />
+    <Compile Include="AtomicRegions\AtomComposer.cs" />
     <Compile Include="Area-Based Analyses\KnownValueAcquisition.cs" />
     <Compile Include="Area-Based Analyses\KnownMeasurementsAggregator.cs" />
+    <Compile Include="AtomicRegions\Atomic Region Calculator\FacetCalculator.cs" />
+    <Compile Include="AtomicRegions\Atomic Region Calculator\Filament.cs" />
+    <Compile Include="AtomicRegions\Atomic Region Calculator\IsolatedPoint.cs" />
+    <Compile Include="AtomicRegions\Atomic Region Calculator\MinimalCycle.cs" />
+    <Compile Include="AtomicRegions\Atomic Region Calculator\OrderedPointList\OrderedPointList.cs" />
+    <Compile Include="AtomicRegions\Atomic Region Calculator\PlanarGraphConstructor.cs" />
+    <Compile Include="AtomicRegions\Atomic Region Calculator\Primitive.cs" />
     <Compile Include="Area-Based Analyses\Regions\ShapeRegion.cs" />
-    <Compile Include="Area-Based Analyses\AtomicRegions\NonShapeAtomicRegion.cs" />
-    <Compile Include="Area-Based Analyses\AtomicRegions\ShapeAtomicRegion.cs" />
+    <Compile Include="AtomicRegions\DifferenceAtomicRegion.cs" />
+    <Compile Include="AtomicRegions\ShapeAtomicRegion.cs" />
+    <Compile Include="AtomicRegions\UndirectedPlanarGraph\PlanarGraph.cs" />
+    <Compile Include="AtomicRegions\UndirectedPlanarGraph\PlanarGraphEdge.cs" />
+    <Compile Include="AtomicRegions\UndirectedPlanarGraph\PlanarGraphNode.cs" />
     <Compile Include="ConcreteAST\Desciptors\Relations\Proportionalities\AlgebraicSegmentRatioEquation.cs" />
     <Compile Include="ConcreteAST\Desciptors\Relations\Proportionalities\GeometricSegmentRatioEquation.cs" />
     <Compile Include="ConcreteAST\Desciptors\Relations\Proportionalities\SegmentRatioEquation.cs" />
@@ -78,7 +91,7 @@
     <Compile Include="ConcreteAST\Figures\ConcavePolygon.cs" />
     <Compile Include="ConcreteAST\Figures\ImaginaryPoint.cs" />
     <Compile Include="ConcreteAST\Figures\Polygon.cs" />
-    <Compile Include="Area-Based Analyses\AtomicRegions\AtomicRegion.cs" />
+    <Compile Include="AtomicRegions\AtomicRegion.cs" />
     <Compile Include="Area-Based Analyses\AreaHypergraph\AreaPowersetHypergraph.cs" />
     <Compile Include="EngineUIBridge\Assumption.cs" />
     <Compile Include="Area-Based Analyses\AST\FigureNode.cs" />
@@ -160,6 +173,7 @@
     <Compile Include="Hypergraph\EdgeAnnotation.cs" />
     <Compile Include="Instantiator\Theorems\SupplementaryAndCongruentImplyRightAngles.cs" />
     <Compile Include="Pebbler\Pebbler.cs" />
+    <Compile Include="PointFactory.cs" />
     <Compile Include="ProblemAnalyzer\MultiGoalProblem.cs" />
     <Compile Include="EngineUIBridge\ProblemDescription.cs" />
     <Compile Include="UIFigureAnalyzerMain.cs" />
