A few bug fixes in preparation of release.
Fix polygon intersection.
Atomic region updates (not working).
Fix proportionality.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Main/SilverlightClient/SilverlightClient.2010.v11.suo
 Main/SilverlightClient/SilverlightClient.2010.v11.suo
 Main/SilverlightClient/SilverlightClient.2010.v11.suo
+*.vsp
+*.psess
