--- a/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
+++ b/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
@@ -99,6 +99,7 @@
     <None Include="Drawing.cd" />
     <Compile Include="Drawing.cs" />
     <Compile Include="UIParser\AbstractParserMain.cs" />
+    <Compile Include="UIParser\ShapeContainmentCalculator.cs" />
     <Compile Include="UIParser\DrawingPointCalculator.cs" />
     <Compile Include="UIParser\ShapeIntersectionCalculator.cs" />
     <Compile Include="UIParser\PolygonCalculator.cs" />
