--- a/Main/TestApp/TestApp.csproj
+++ b/Main/TestApp/TestApp.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Circles\Page306Theorem7_4_1_Semicircle.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Circles\Page307Theorem7_5.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Circles\Page309Problem09.cs" />
+    <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Circles\Page312Theorem7_7_Semicircle.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\ExtraSquareProblem.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page162Problem20.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page166Problem05.cs" />
