--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ Main/SilverlightClient/SilverlightClient.2010.v11.suo
 *.vsp
 *.psess
 Main/SilverlightClient/SilverlightClient.2010.v11.suo
+Main/SilverlightClient/SilverlightClient.2010.v11.suo
+Main/SilverlightClient/SilverlightClient.2010.v11.suo
+Main/SilverlightClient/SilverlightClient.2010.v11.suo
