--- a/Main/TestApp/TestApp.csproj
+++ b/Main/TestApp/TestApp.csproj
@@ -87,6 +87,8 @@
     <Compile Include="Problems\ShadedAreaProblems\BasicInteriorPolygonTester.cs" />
     <Compile Include="Problems\ShadedAreaProblems\BasicInteriorPolygonTester2.cs" />
     <Compile Include="Problems\ShadedAreaProblems\BasicPathologicalPolygonTester.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ThreeCircleTwoOverlapTester.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ThreeCirclePathologicalTester.cs" />
     <Compile Include="Problems\ShadedAreaProblems\RegularPolygonCrushingTester.cs" />
     <Compile Include="Problems\ShadedAreaProblems\FilamentTester.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page2prob18.cs" />
