--- a/Main/TestApp/TestApp.csproj
+++ b/Main/TestApp/TestApp.csproj
@@ -81,17 +81,17 @@
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page172Problem19.cs" />
     <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page178SelfTest07.cs" />
     <Compile Include="Problems\ShadedAreaProblems\ActualShadedAreaProblem.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\CircCircRegionTester.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\CircCircCircRegionTester.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\ContainmentTester.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\BasicPolygonTester.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\BasicInteriorPolygonTester.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\BasicInteriorPolygonTester2.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\BasicPathologicalPolygonTester.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\ThreeCircleTwoOverlapTester.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\ThreeCirclePathologicalTester.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\RegularPolygonCrushingTester.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\FilamentTester.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\For Testing\CircCircRegionTester.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\For Testing\CircCircCircRegionTester.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\For Testing\ContainmentTester.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\For Testing\BasicPolygonTester.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\For Testing\BasicInteriorPolygonTester.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\For Testing\BasicInteriorPolygonTester2.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\For Testing\BasicPathologicalPolygonTester.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\For Testing\ThreeCircleTwoOverlapTester.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\ClassX\Page1Col1Prob5.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\For Testing\RegularPolygonCrushingTester.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\For Testing\FilamentTester.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page2prob18.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page2prob17.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page2prob15.cs" />
@@ -101,7 +101,7 @@
     <Compile Include="Problems\ShadedAreaProblems\ClassX\Page1Col2Prob3.cs" />
     <Compile Include="Problems\ShadedAreaProblems\ClassX\Page1Col2Prob2.cs" />
     <Compile Include="Problems\ShadedAreaProblems\ClassX\Page1Col2Prob1.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\PathologicalTester.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\For Testing\PathologicalTester.cs" />
     <Compile Include="Problems\ShadedAreaProblems\ClassX\Page2Col1Prob2.cs" />
     <Compile Include="Problems\ShadedAreaProblems\ShadedAreaProblems.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
