General Shaded Solution Generator Updates
Cheap Pretty Printing
A few new problems (untested).

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Main/SilverlightClient/SilverlightClient.2010.v11.suo
 Main/SilverlightClient/SilverlightClient.2010.v11.suo
 Main/SilverlightClient/SilverlightClient.2010.v11.suo
 Main/SilverlightClient/SilverlightClient.2010.v11.suo
+Main/SilverlightClient/SilverlightClient.2010.v11.suo
