--- a/Main/TestApp/TestApp.csproj
+++ b/Main/TestApp/TestApp.csproj
@@ -92,9 +92,10 @@
     <Compile Include="Problems\ShadedAreaProblems\ClassX\Page1Col1Prob5.cs" />
     <Compile Include="Problems\ShadedAreaProblems\For Testing\RegularPolygonCrushingTester.cs" />
     <Compile Include="Problems\ShadedAreaProblems\For Testing\FilamentTester.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page2Prob16.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page2prob18.cs" />
     <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page2prob17.cs" />
-    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page2prob15.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page2Prob15.cs" />
     <Compile Include="Problems\ShadedAreaProblems\ClassX\Page2Col2Prob2.cs" />
     <Compile Include="Problems\ShadedAreaProblems\ClassX\Page2Col2Prob1.cs" />
     <Compile Include="Problems\ShadedAreaProblems\ClassX\Page1Col1Prob1.cs" />
@@ -103,6 +104,17 @@
     <Compile Include="Problems\ShadedAreaProblems\ClassX\Page1Col2Prob1.cs" />
     <Compile Include="Problems\ShadedAreaProblems\For Testing\PathologicalTester.cs" />
     <Compile Include="Problems\ShadedAreaProblems\ClassX\Page2Col1Prob2.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page2Prob20.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page3Prob21.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page3Prob22.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page3Prob23.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page3Prob24.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page3Prob25.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page3Prob26.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page4Prob17.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page4Prob18.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page4Prob7.cs" />
+    <Compile Include="Problems\ShadedAreaProblems\Jurgensen\Page4Prob8.cs" />
     <Compile Include="Problems\ShadedAreaProblems\ShadedAreaProblems.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Problems\ActualProblem.cs" />
