Flood Changes (No fix)
Do not use commit for permanent functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Main/SilverlightClient/SilverlightClient.2010.v11.suo
 Main/SilverlightClient/SilverlightClient.2010.v11.suo
 Main/SilverlightClient/SilverlightClient.2010.v11.suo
 Main/SilverlightClient/SilverlightClient.2010.v11.suo
+Main/SilverlightClient/SilverlightClient.2010.v11.suo.orig
