UI Updates for Region Shading: + Workflow introduced. Start will freeze drawing and allow shading. Clear will clear shading and unfreeze drawing. Hence we only need to parse once per workflow cycle. + Proper region shading addition and removal. + Regions properly update on drawing zoom.

--- a/Main/SilverlightClient/SilverlightClient.2010.csproj
+++ b/Main/SilverlightClient/SilverlightClient.2010.csproj
@@ -158,6 +158,12 @@
     <Resource Include="..\DynamicGeometryLibrary\Resources\MarkRegion.png">
       <Link>MarkRegion.png</Link>
     </Resource>
+    <Resource Include="..\DynamicGeometryLibrary\Resources\Play.png">
+      <Link>Play.png</Link>
+    </Resource>
+    <Resource Include="..\DynamicGeometryLibrary\Resources\Trash.png">
+      <Link>Trash.png</Link>
+    </Resource>
     <Content Include="ServiceReferences.ClientConfig" />
   </ItemGroup>
   <ItemGroup>
